--- a/analytics/src/main/resources/html/api.html
+++ b/analytics/src/main/resources/html/api.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-   <title>Atmos Analytics REST API Description</title>
+   <title>Analytics REST API Description</title>
    <link rel="stylesheet" href="/static/api.css" />
  </head>
  <body>
-   <h1>Atmos Analytics REST API Description</h1>
+   <h1>Analytics REST API Description</h1>
 
    <div id="result" >
    </div>
